test multiple apps

--- a/servers/autograph.conf
+++ b/servers/autograph.conf
@@ -11,4 +11,8 @@ server {
 		rewrite ^/autograph(.*)$ $1 break;
 		root "/Users/niweiguo/editorial/autograph/public/";
 	}
+
+	# location ~ \.(css|js|svg|csv|png)$ {
+	# 	root "/opt/nodesatic/";
+	# }
 }
