--- a/servers/autograph.conf
+++ b/servers/autograph.conf
@@ -7,9 +7,9 @@ server {
 		proxy_redirect off;
 	}
 
-	location ~ \.(css|js|svg|csv|png)$ {
-		rewrite ^/autograph(.*)$ $1 break;
-		root "/Users/niweiguo/editorial/autograph/public/";
+	location ~ ^/autograph/(.+\.(?:css|js|svg|csv|png))$ {
+		# rewrite ^/autograph(.*)$ $1 break;
+		root "/Users/niweiguo/editorial/autograph/public/$1";
 	}
 
 	# location ~ \.(css|js|svg|csv|png)$ {
