proxy for numbers

--- a/servers/autograph.conf
+++ b/servers/autograph.conf
@@ -7,6 +7,10 @@ server {
 		proxy_redirect off;
 	}
 
+	location /numbers/ {
+		proxy_pass "http://localhost:4001/";
+	}
+
 	location ~ ^/autograph/(.+\.(?:css|js|svg|csv|png))$ {
 		# rewrite ^/autograph(.*)$ $1 break;
 		root "/Users/niweiguo/editorial/autograph/public/$1";
