--- a/servers/php7.conf
+++ b/servers/php7.conf
@@ -16,6 +16,13 @@
             fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
             fastcgi_param SCRIPT_NAME $fastcgi_script_name;
             fastcgi_index index.php;
+            # This point to the fpm's address on which to accept FastCGI requests.
+            # You need to set it expclitely if you don't want to use the default.
+            # In you `php-fpm.conf` file, (it might be `php-fpm.d/www.conf` if you installed PHP by Homebrew on Mac),
+            # find this section starting with `The address on which to accept FastCGI requests.`
+            # Find this line `listen = 127.0.0.1:9000`.
+            # Copy and paste the IP and PORT here. They must be consitent.
+            # If you want FPM run on another port, change it to another one in both of these two places.
             fastcgi_pass 127.0.0.1:9000;
         }
     }
