--- a/servers/php7.conf
+++ b/servers/php7.conf
@@ -1,50 +1,52 @@
-    server {
-        listen 8090;
-        server_name localhost;
-        index index.php;
-        error_log /Users/niweiguo/logs/fta.error.log;
-        access_log /Users/niweiguo/logs/fta.access.log;
-        root /Users/niweiguo/ftc-repo/ftacademy/public;
-        
-        location / {
-            try_files $uri /index.php$is_args$args;
-        }
-
-        location ~ \.php {
-            fastcgi_split_path_info ^(.+\.php)(/.+)$;
-            include fastcgi_params;
-            fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-            fastcgi_param SCRIPT_NAME $fastcgi_script_name;
-            fastcgi_index index.php;
-            # This point to the fpm's address on which to accept FastCGI requests.
-            # You need to set it expclitely if you don't want to use the default.
-            # In you `php-fpm.conf` file, (it might be `php-fpm.d/www.conf` if you installed PHP by Homebrew on Mac),
-            # find this section starting with `The address on which to accept FastCGI requests.`
-            # Find this line `listen = 127.0.0.1:9000`.
-            # Copy and paste the IP and PORT here. They must be consitent.
-            # If you want FPM run on another port, change it to another one in both of these two places.
-            fastcgi_pass 127.0.0.1:9000;
-        }
+# You must configure and start FPM first.
+# With it default settings you can run the command: `php-fpm --fpm-config=/usr/local/etc/php/7.2/php-fpm.conf`
+server {
+    listen 8090;
+    server_name localhost;
+    index index.php;
+    error_log /Users/niweiguo/logs/fta.error.log;
+    access_log /Users/niweiguo/logs/fta.access.log;
+    root /Users/niweiguo/ftc-repo/ftacademy/public;
+    
+    location / {
+        try_files $uri /index.php$is_args$args;
     }
 
-    # server {
-    #     listen 8091;
-    #     server_name localhost;
-    #     index index.php;
-    #     error_log /Users/niweiguo/logs/php5.6.error.log;
-    #     access_log /Users/niweiguo/logs/php5.6.access.log;
-    #     root /Users/niweiguo/code/www;
-        
-    #     location / {
-    #         try_files $uri /index.php$is_args$args;
-    #     }
+    location ~ \.php {
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+        fastcgi_index index.php;
+        # This point to the fpm's address on which to accept FastCGI requests.
+        # You need to set it expclitely if you don't want to use the default.
+        # In you `php-fpm.conf` file, (it might be `php-fpm.d/www.conf` if you installed PHP by Homebrew on Mac),
+        # find this section starting with `The address on which to accept FastCGI requests.`
+        # Find this line `listen = 127.0.0.1:9000`.
+        # Copy and paste the IP and PORT here. They must be consitent.
+        # If you want FPM run on another port, change it to another one in both of these two places.
+        fastcgi_pass 127.0.0.1:9000;
+    }
+}
 
-    #     location ~ \.php {
-    #         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-    #         include fastcgi_params;
-    #         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-    #         fastcgi_param SCRIPT_NAME $fastcgi_script_name;
-    #         fastcgi_index index.php;
-    #         fastcgi_pass 127.0.0.1:9001;
-    #     }
-    # }
+# server {
+#     listen 8091;
+#     server_name localhost;
+#     index index.php;
+#     error_log /Users/niweiguo/logs/php5.6.error.log;
+#     access_log /Users/niweiguo/logs/php5.6.access.log;
+#     root /Users/niweiguo/code/www;
+    
+#     location / {
+#         try_files $uri /index.php$is_args$args;
+#     }
+
+#     location ~ \.php {
+#         fastcgi_split_path_info ^(.+\.php)(/.+)$;
+#         include fastcgi_params;
+#         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+#         fastcgi_param SCRIPT_NAME $fastcgi_script_name;
+#         fastcgi_index index.php;
+#         fastcgi_pass 127.0.0.1:9001;
+#     }
+# }
